--- a/AnzeigenChef/Base.lproj/MainMenu.xib
+++ b/AnzeigenChef/Base.lproj/MainMenu.xib
@@ -268,12 +268,6 @@
                                     <action selector="websiteButtonAction:" target="Voe-Tx-rLC" id="xLJ-B1-No9"/>
                                 </connections>
                             </menuItem>
-                            <menuItem title="Sourcecode on GitHub" id="UKQ-LK-llj">
-                                <modifierMask key="keyEquivalentModifierMask"/>
-                                <connections>
-                                    <action selector="sourcecodeAction:" target="Voe-Tx-rLC" id="hXp-gc-lmr"/>
-                                </connections>
-                            </menuItem>
                         </items>
                     </menu>
                 </menuItem>
@@ -301,19 +295,22 @@
                                 <autoresizingMask key="autoresizingMask"/>
                                 <subviews>
                                     <box autoresizesSubviews="NO" title="Box" boxType="custom" borderType="none" titlePosition="noTitle" id="Xat-iW-rZ9">
-                                        <rect key="frame" x="0.0" y="0.0" width="159" height="20"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="159" height="75"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                         <view key="contentView">
-                                            <rect key="frame" x="0.0" y="0.0" width="159" height="20"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="159" height="75"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <subviews>
-                                                <button id="Zzu-TV-CZw">
-                                                    <rect key="frame" x="0.0" y="0.0" width="30" height="20"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                                    <buttonCell key="cell" type="bevel" bezelStyle="regularSquare" image="NSAddTemplate" imagePosition="overlaps" alignment="center" imageScaling="proportionallyDown" inset="2" id="TOf-WY-3Xr">
+                                                <button id="GDJ-Uh-paG">
+                                                    <rect key="frame" x="34" y="7" width="90" height="60"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                                                    <buttonCell key="cell" type="bevel" bezelStyle="regularSquare" image="x-click-butcc-donate" imagePosition="overlaps" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="l1E-RJ-m92">
                                                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                                         <font key="font" metaFont="system"/>
                                                     </buttonCell>
+                                                    <connections>
+                                                        <action selector="spendAction:" target="Voe-Tx-rLC" id="dqn-cw-Mm8"/>
+                                                    </connections>
                                                 </button>
                                             </subviews>
                                         </view>
@@ -321,10 +318,10 @@
                                         <color key="fillColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.94509803921568625" alpha="1" colorSpace="calibratedRGB"/>
                                     </box>
                                     <scrollView borderType="none" autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" usesPredominantAxisScrolling="NO" id="m2P-XA-ndq">
-                                        <rect key="frame" x="0.0" y="20" width="159" height="523"/>
+                                        <rect key="frame" x="0.0" y="75" width="159" height="468"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                         <clipView key="contentView" id="Z97-2q-o52">
-                                            <rect key="frame" x="0.0" y="0.0" width="159" height="523"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="159" height="468"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <subviews>
                                                 <outlineView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnReordering="NO" columnResizing="NO" multipleSelection="NO" emptySelection="NO" autosaveColumns="NO" autosaveName="MainOutline" rowSizeStyle="automatic" viewBased="YES" indentationPerLevel="16" outlineTableColumn="pFn-Bf-Aqr" id="1K3-fZ-iPx">
@@ -839,7 +836,7 @@
                     <toolbarItem reference="ThZ-VD-Z3e"/>
                 </defaultToolbarItems>
             </toolbar>
-            <point key="canvasLocation" x="317" y="440.5"/>
+            <point key="canvasLocation" x="639" y="623.5"/>
         </window>
         <menu id="O7F-Zu-eW3">
             <items>
@@ -962,7 +959,6 @@
         <image name="Circle - Green_48x48" width="48" height="48"/>
         <image name="Continue" width="48" height="48"/>
         <image name="Maintenance" width="48" height="48"/>
-        <image name="NSAddTemplate" width="11" height="11"/>
         <image name="NSHomeTemplate" width="14" height="14"/>
         <image name="NSInfo" width="32" height="32"/>
         <image name="NSQuickLookTemplate" width="19" height="12"/>
@@ -976,5 +972,6 @@
         <image name="Pause" width="48" height="48"/>
         <image name="Remove-ticket" width="48" height="48"/>
         <image name="Tag - Sale - Green_48x48" width="48" height="48"/>
+        <image name="x-click-butcc-donate" width="73" height="44"/>
     </resources>
 </document>
